--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -285,14 +285,12 @@
                 </div>
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
                     <div class="m-file bg-default rounded-md top-left-radius-0 ">
-                        <p class="m-file__title h3 text-white"> Projectathon #2</p>
-                        <p class="m-file__title h4 text-white"> Lundi 13 & Mardi 14 novembre 2023 de 9h30 à 18h.
+                        <p class="m-file__title h3 text-white"> Projectathon #3</p>
+                        <p class="m-file__title h4 text-white"> Lundi 15 & Mardi 16 janvier 2024 de 9h30 à 18h.
                         </p>
-                        <p>Après un premier Projectathon réussi à la rentrée de septembre, nous organisons le second -
-                            toujours en distanciel
-                            - les lundi 13 et mardi 14 novembre. Le but est de poursuivre les travaux lancés sur le
-                            périmètre 15-18,
-                            notamment avec la simulation d'envoi et de réception de messages via le Hub. </p>
+                        <p>Après deux Projectathon réussis sur 2023, nous organisons le troisième - toujours en
+                            distanciel - les lundi 15 et mardi 16 janvier. Le but est de poursuivre les travaux lancés
+                            sur le périmètre 15-NexSIS notamment avec la nouvelle plateforme de recette.</p>
                         <p>Le Projectathon commencera par une brève réunion de lancement :
                             point de situation des travaux, présentation de l'organisation, des ressources disponibles
                             et différents paliers validables.</p>
@@ -302,14 +300,16 @@
                 </div>
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
                     <div class="m-file bg-default rounded-md top-left-radius-0">
-                        <p class="m-file__title h3 text-white"> Projectathon #1 </p>
-                        <p class="m-file__title h4 text-white"> Lundi 18 & Mardi 19 septembre 2023 de 9h30 à 18h.
-                        </p>
-                        <p>Afin de relancer les travaux du Hub Santé au retour de l'été, nous organisons un premier
-                            Projectathon en distanciel sur les lundi 18 et mardi 19 septembre.
-                            Le Projectathon commencera par une réunion de lancement: point de situation des travaux,
-                            démonstration du Hub Santé, présentation de l'organisation et des ressources du
-                            Projectathon , différents paliers validables ensemble. </p>
+                        <p class="m-file__title h3 text-white"> Projectathon #2 </p>
+                        <p class="m-file__title h4 text-white"> Lundi 13 & Mardi 14 novembre 2023 de 9h30 à 18h.</p>
+                        <p>Après un premier Projectathon réussi à la rentrée de septembre, nous organisons le second -
+                            toujours en distanciel
+                            - les lundi 13 et mardi 14 novembre. Le but est de poursuivre les travaux lancés sur le
+                            périmètre 15-18,
+                            notamment avec la simulation d'envoi et de réception de messages via le Hub. </p>
+                        <p>Le Projectathon commencera par une brève réunion de lancement :
+                            point de situation des travaux, présentation de l'organisation, des ressources disponibles
+                            et différents paliers validables.</p>
                         <p> La participation sur les deux jours est complètement modulable : n'hésitez pas à nous
                             contacter pour plus d'information.</p>
                     </div>
@@ -336,6 +336,66 @@
         </div>
 
         <!-- Webinaires en replay -->
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon3">
+            <div class="container">
+                <div class="o-paragraph--text-media__slider">
+                    <div class="o-paragraph--text-media__item">
+                        <div class="o-paragraph--text-media leftVisual">
+                            <div class="row align-items-center">
+                                <div class="col-md mb-3 mb-md-0">
+                                    <div class="o-paragraph--text-media__content pt-3">
+                                        <h2>Webinaire Point d'Information #1</h2>
+                                        <h3>4 décembre 2023</h3>
+                                        <div class="wysiwyg mb-3">
+                                            <p>
+                                                Pour bien lancer l'année 2024, un 3ème Projectathon a été organisé !
+                                            </p>
+                                            <p>
+                                                À destination des éditeurs participants, cette réunion de lancement fait
+                                                un point de situation des travaux (techniques, 15-NexSIS et 15-15), une
+                                                démonstration de la plateforme de recette, une présentation de
+                                                l'organisation et des ressources du Projectathon puis des différents
+                                                paliers validables.
+                                            </p>
+                                        </div>
+
+                                        <div class="paragraph--lien">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3">
+                                                    <a href="https://youtu.be/B9wp8laax3M"
+                                                       class="btn btn--style1 btn--white" target="_blank">Visionner
+                                                    </a>
+                                                </div>
+                                                <div class="col-md mb-3">
+                                                    <a href="/resources/projectathon/24.01.15 - Hub Sante - Projectathon 3.pdf"
+                                                       class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
+                                                        1.1Mo)
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md o-paragraph--text-media__media_column">
+                                    <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                        <div class="o-paragraph--text-media__clip">
+                                            <a href="https://youtu.be/B9wp8laax3M" target="_blank">
+                                                <img src="/img/crea/illustrations_webinaires/Projectathon editeurs 1.png"
+                                                     alt="" width="585"
+                                                     height="329" loading="lazy">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
         <div class="paragraph-space o-paragraph--text-media__wrapper" id="webinaire1">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
