[Landing/webinaire] Fixing title

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -344,8 +344,8 @@
                             <div class="row align-items-center">
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
-                                        <h2>Webinaire Point d'Information #1</h2>
-                                        <h3>4 décembre 2023</h3>
+                                        <h2>Projectathon éditeurs #3</h2>
+                                        <h3>15-16 janvier 2024</h3>
                                         <div class="wysiwyg mb-3">
                                             <p>
                                                 Pour bien lancer l'année 2024, un 3ème Projectathon a été organisé !
