[Landing] Adding DSF, article mise en concertation et slides projectathon

--- a/web/landing/pages/15-15.html
+++ b/web/landing/pages/15-15.html
@@ -332,14 +332,25 @@
     </div>
     <div class="o-paragraph--files row col--eq-height mt-4 ">
         <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-            <a href="/resources/15-15/20230914 - Contrat d'interface LRM 15-15 v0.1.pdf"
-                class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
-                <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles 15-15 </p>
-                <p class="m-file__info text-default mb-0"><I>PDF - Périmètre 15-15 - Version 0.1 - 1.6 Mo</I></p>
+            <a href="/resources/15-15/Contrat d'interface LRM 15-15 v1.0.pdf"
+               class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
+                <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles</p>
+                <p class="m-file__info text-default mb-0"><I>
+                    PDF - Périmètre 15-15 - Version 1
+                    <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Contenu de l'infobulle</p>">
+                        <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="svg-icons/icon-sprite.svg#question-circle"></use></svg>
+                        <span class="sr-only">Mise en concertation du 10 au 31 janvier 2024</span>
+                    </button>
+                    - 1.4 Mo
+                </I></p>
             </a>
         </div>
-  
-
+        <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
+            <a href="/resources/15-15/24.01 DSF v1.0 - Hub Santé connecteurs LRM SAMU - LRM SAMU.zip"
+               class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
+                <p class="m-file__title h4 mb-1">Annexes du DSF 15-15</p>
+                <p class="m-file__info text-default mb-0"><I>ZIP - Version 1 - 2.8 Mo</I></p>
+            </a>
         </div>
     </div>
 </div>
