--- a/web/landing/pages/15-18.html
+++ b/web/landing/pages/15-18.html
@@ -323,24 +323,31 @@
                 </div>
                 <div class="o-paragraph--files row col--eq-height mt-4 ">
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                        <a href="/resources/15-nexsis/20230629 - Demarche editeur lien 15 - NexSIS.pdf"
+                        <a href="/resources/15-nexsis/20240110 DSF v1.4 VF.pdf"
                             class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
+                            <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles</p>
+                            <p class="m-file__info text-default mb-0"><I>
+                                PDF - Périmètre 15-NexSIS - Version 1.4
+                                <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Contenu de l'infobulle</p>">
+                                    <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="svg-icons/icon-sprite.svg#question-circle"></use></svg>
+                                    <span class="sr-only">Mise en concertation du 10 au 31 janvier 2024</span>
+                                </button>
+                                - 9.8 Mo
+                            </I></p>
+                        </a>
+                    </div>
+                    <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
+                        <a href="/resources/15-nexsis/24.01 DSF V1.4 - Hub Santé connecteurs LRM - NexSIS.zip"
+                            class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
+                            <p class="m-file__title h4 mb-1">Annexes du DSF 15-NexSIS</p>
+                            <p class="m-file__info text-default mb-0"><I>ZIP - Version 1.4 - 24.6 Mo</I></p>
+                        </a>
+                    </div>
+                    <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
+                        <a href="/resources/15-nexsis/20230629 - Demarche editeur lien 15 - NexSIS.pdf"
+                           class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
                             <p class="m-file__title h4 mb-1">Démarche éditeur</p>
                             <p class="m-file__info text-default mb-0"><I>PDF - Version 20230629 - 0.9 Mo</I></p>
-                        </a>
-                    </div>
-                    <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                        <a href="/resources/15-nexsis/20230912 - Contrat d'interface LRM NexSIS v1.1 - export Projectathon.pdf"
-                            class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
-                            <p class="m-file__title h4 mb-1">Dossier des spécifications Fonctionnelles 15-NexSIS</p>
-                            <p class="m-file__info text-default mb-0"><I>PDF - Périmètre 15-18 - Version 1.1 - 11.2 Mo</I></p>
-                        </a>
-                    </div>
-                    <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                        <a href="/resources/15-nexsis/RC-EDA_schema.pdf"
-                            class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
-                            <p class="m-file__title h4 mb-1">DSF Annexe - RC-EDA "createCase" - Périmètre 15-18</p>
-                            <p class="m-file__info text-default mb-0"><I>PDF- Version 1.1 - 0.4 Mo</I></p>
                         </a>
                     </div>
                 </div>
@@ -350,6 +357,13 @@
                     </div>
                 </div>
                 <div class="o-paragraph--files row col--eq-height mt-4 ">
+                    <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
+                        <a href="/resources/projectathon/24.01.15 - Hub Sante - Projectathon 3.pdf"
+                           class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
+                            <p class="m-file__title h4 mb-1">Slides Projectathon #3 du 24.01.15</p>
+                            <p class="m-file__info text-default mb-0"><I>PDF - 1.1 Mo</I></p>
+                        </a>
+                    </div>
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
                         <a href="/resources/projectathon/23.11.13 - Hub Sante - Projectathon 2.pdf"
                            class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
