--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -336,6 +336,60 @@
         </div>
 
         <!-- Webinaires en replay -->
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="journee_presentielle">
+            <div class="container">
+                <div class="o-paragraph--text-media__slider">
+                    <div class="o-paragraph--text-media__item">
+                        <div class="o-paragraph--text-media rightVisual">
+                            <div class="row align-items-center">
+                                <div class="col-md mb-3 mb-md-0">
+                                    <div class="o-paragraph--text-media__content pt-3">
+                                        <h2>Journée métiers et éditeurs</h2>
+                                        <h3>26 février 2024</h3>
+                                        <div class="wysiwyg mb-3">
+                                            <p>
+                                                Journée d'échanges entre la DGOS, les référents métiers nationaux, les
+                                                11 SAMU pilotes du Hub Santé et les éditeurs de LRM.
+                                            </p>
+                                            <p>
+                                                Cette journée avait pour objectif de présenter l’avancement des travaux,
+                                                d'exposer l’articulation avec les travaux CISU élaborés en
+                                                interministériel et associant notamment les représentants Santé et
+                                                d'identifier et arbitrer collectivement sur des orientations clés à
+                                                prendre.
+                                            </p>
+                                        </div>
+
+                                        <div class="paragraph--lien">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3">
+                                                    <a href="/resources/24.02.26 - Journee Hub Sante - avec CR.pdf"
+                                                       class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
+                                                        4.4Mo)
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md o-paragraph--text-media__media_column">
+                                    <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                        <div class="o-paragraph--text-media__clip">
+                                            <img src="/img/crea/Illust. kick off metier des pilotes.png"
+                                                 alt="" width="585"
+                                                 height="329" loading="lazy">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
         <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon3">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
