fix/landing: adding image for Journée Présentielle

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -375,7 +375,7 @@
                                 <div class="col-md o-paragraph--text-media__media_column">
                                     <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                         <div class="o-paragraph--text-media__clip">
-                                            <img src="/img/crea/Illust. kick off metier des pilotes.png"
+                                            <img src="/img/crea/illustrations_webinaires/Illust. kick off metier des pilotes.png"
                                                  alt="" width="585"
                                                  height="329" loading="lazy">
                                         </div>
