fix/landing: adding ANS for Journée Présentielle

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -349,7 +349,7 @@
                                         <div class="wysiwyg mb-3">
                                             <p>
                                                 Journée d'échanges entre la DGOS, les référents métiers nationaux, les
-                                                11 SAMU pilotes du Hub Santé et les éditeurs de LRM.
+                                                11 SAMU pilotes du Hub Santé, les éditeurs de LRM et l'ANS.
                                             </p>
                                             <p>
                                                 Cette journée avait pour objectif de présenter l’avancement des travaux,
