feat/landing: adding Projectathon #4 news

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -267,6 +267,22 @@
                     <h2>Les rendez-vous du Hub </h2>
                 </div>
             </div>
+            <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
+                <div class="m-file bg-default rounded-md top-left-radius-0">
+                    <p class="m-file__title h3 text-white"> Projectathon #4 </p>
+                    <p class="m-file__title h4 text-white"> Jeudi 21 & vendredi 22 mars 2024 de 9h30 à 18h.</p>
+                    <p>Dans la continuité des travaux avec les éditeurs et en préparation des premiers pilotes,
+                        nous organisons le quatrième projectathon - toujours en distanciel - les jeudi 21 et vendredi 22
+                        mars. Le but est de poursuivre les travaux lancés sur le périmètre 15-18 et amorcés sur le
+                        périmètre 15-15 pour préparer les recettes fonctionnelles et déploiements pilotes à venir.
+                    </p>
+                    <p>Le Projectathon commencera par une brève réunion de lancement :
+                        point de situation des travaux, présentation de l'organisation, des ressources disponibles
+                        et différents paliers validables.</p>
+                    <p> La participation sur les deux jours est complètement modulable : n'hésitez pas à nous
+                        contacter pour plus d'information.</p>
+                </div>
+            </div>
             <div class="o-paragraph--files row col--eq-height mt-4 text-white">
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
                     <div class="m-file bg-default rounded-md top-left-radius-0">
@@ -286,7 +302,7 @@
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
                     <div class="m-file bg-default rounded-md top-left-radius-0 ">
                         <p class="m-file__title h3 text-white"> Projectathon #3</p>
-                        <p class="m-file__title h4 text-white"> Lundi 15 & Mardi 16 janvier 2024 de 9h30 à 18h.
+                        <p class="m-file__title h4 text-white"> Lundi 15 & mardi 16 janvier 2024 de 9h30 à 18h.
                         </p>
                         <p>Après deux Projectathon réussis sur 2023, nous organisons le troisième - toujours en
                             distanciel - les lundi 15 et mardi 16 janvier. Le but est de poursuivre les travaux lancés
@@ -297,24 +313,6 @@
                         <p> La participation sur les deux jours est complètement modulable : n'hésitez pas à nous
                             contacter pour plus d'information.</p>
                     </div>
-                </div>
-                <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-                    <div class="m-file bg-default rounded-md top-left-radius-0">
-                        <p class="m-file__title h3 text-white"> Projectathon #2 </p>
-                        <p class="m-file__title h4 text-white"> Lundi 13 & Mardi 14 novembre 2023 de 9h30 à 18h.</p>
-                        <p>Après un premier Projectathon réussi à la rentrée de septembre, nous organisons le second -
-                            toujours en distanciel
-                            - les lundi 13 et mardi 14 novembre. Le but est de poursuivre les travaux lancés sur le
-                            périmètre 15-18,
-                            notamment avec la simulation d'envoi et de réception de messages via le Hub. </p>
-                        <p>Le Projectathon commencera par une brève réunion de lancement :
-                            point de situation des travaux, présentation de l'organisation, des ressources disponibles
-                            et différents paliers validables.</p>
-                        <p> La participation sur les deux jours est complètement modulable : n'hésitez pas à nous
-                            contacter pour plus d'information.</p>
-                    </div>
-
-
                 </div>
             </div>
         </div>
