feat/landing: adding DSF release

--- a/web/landing/pages/actualites.html
+++ b/web/landing/pages/actualites.html
@@ -313,7 +313,29 @@
 
                     <div class="o-paragraph--mixed-push__teasers mt-4">
                         <div class="o-paragraph--mixed-push__slider col--eq-height">
-
+                            <article class="m-teaser m-teaser--news mb-3 col--eq-height">
+                                <a href="/pages/15-18.html" class="bg-white border rounded-md top-left-radius-0">
+                                    <div class="m-teaser__img">
+                                        <img src="/img/ans/IMG_Editeurs_2.jpeg" alt="" width="378" height="213" loading="lazy">
+                                    </div>
+                            
+                                    <div class="m-teaser__content">
+                                        <h3 class="m-teaser__title h4 mb-1">Mise en concertation des DSF 15-NexSIS
+                                            v1.5
+                                            et 15-15 v1.1 jusqu'au 15 avril 2024</h3>
+                                        <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
+                                            <p class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-brand-2 text-white">
+                                                Concertation
+                                            </p>
+                            
+                                            <p class="m-teaser__date mb-1 fw-semiBold ">18 mars 2024
+                                            </p>
+                                        </div>
+                                        <div class="wysiwyg mb-2">
+                                        </div>
+                                    </div>
+                                </a>
+                            </article>
                             <article class="m-teaser m-teaser--news mb-3 col--eq-height">
                                 <a href="/pages/15-18.html"
                                    class="bg-white border rounded-md top-left-radius-0">
@@ -327,7 +349,7 @@
                                             et 15-15 v1 jusqu'au 31 janvier 2024</h3>
                                         <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
                                             <p class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-brand-2 text-white">
-                                                Actualité
+                                                Concertation
                                             </p>
 
                                             <p class="m-teaser__date mb-1 fw-semiBold ">10 janvier 2024
@@ -357,7 +379,7 @@
                                             des 18 et 19 septembre</h3>
                                         <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
                                             <p
-                                                    class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-brand-2 text-white">
+                                                    class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-default text-white">
                                                 Actualité </p>
 
                                             <p class="m-teaser__date mb-1 fw-semiBold ">20 septembre 2023
@@ -416,7 +438,7 @@
                                             côtés des utilisateurs dans le cadre du Congrès Urgences 2023</h3>
                                         <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
                                             <p
-                                                    class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-default text-white">
+                                                    class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-primary text-white">
                                                 Communiqué de presse </p>
 
                                             <p class="m-teaser__date mb-1 fw-semiBold ">9 juin 2023
