--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -238,10 +238,11 @@
                     <p class="lead">Le Hub Santé vous propose des webinaires autour des différents périmètres
                         d’échanges de données entre les différents acteurs de l’urgence.
                     </p>
+                    <!--
                     <p>N’hésitez pas à consulter les webinaires à venir; pour y participer et échanger sur les
                         thématiques d’interopérabilité qui vous impactent.
                     </p>
-
+                    -->
                     <div class="o-banner__share-links d-none d-lg-inline-flex">
                         <ul class="list-unstyled d-lg-inline-flex"></ul>
                     </div>
@@ -260,7 +261,7 @@
 
 
         <!-- Bannière Evenements -->
-
+        <!--
         <div class="container paragraph-space">
             <div class="paragraph__header row justify-content-center">
                 <div class="col-md-10 col-lg-8 text-center mb-3">
@@ -284,21 +285,6 @@
                     </div>
                 </div>
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-                    <div class="m-file bg-default rounded-md top-left-radius-0 ">
-                        <p class="m-file__title h3 text-white"> Projectathon #3</p>
-                        <p class="m-file__title h4 text-white"> Lundi 15 & Mardi 16 janvier 2024 de 9h30 à 18h.
-                        </p>
-                        <p>Après deux Projectathon réussis sur 2023, nous organisons le troisième - toujours en
-                            distanciel - les lundi 15 et mardi 16 janvier. Le but est de poursuivre les travaux lancés
-                            sur le périmètre 15-NexSIS notamment avec la nouvelle plateforme de recette.</p>
-                        <p>Le Projectathon commencera par une brève réunion de lancement :
-                            point de situation des travaux, présentation de l'organisation, des ressources disponibles
-                            et différents paliers validables.</p>
-                        <p> La participation sur les deux jours est complètement modulable : n'hésitez pas à nous
-                            contacter pour plus d'information.</p>
-                    </div>
-                </div>
-                <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
                     <div class="m-file bg-default rounded-md top-left-radius-0">
                         <p class="m-file__title h3 text-white"> Projectathon #2 </p>
                         <p class="m-file__title h4 text-white"> Lundi 13 & Mardi 14 novembre 2023 de 9h30 à 18h.</p>
@@ -318,7 +304,7 @@
                 </div>
             </div>
         </div>
-
+        -->
 
         <!-- SVG pour les formes/pétales. A ajouter seulement une fois dans la page -->
         <svg class="d-block" aria-hidden="true" focusable="false" height="0" width="0">
@@ -336,6 +322,64 @@
         </div>
 
         <!-- Webinaires en replay -->
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon4">
+            <div class="container">
+                <div class="o-paragraph--text-media__slider">
+                    <div class="o-paragraph--text-media__item">
+                        <div class="o-paragraph--text-media rightVisual">
+                            <div class="row align-items-center">
+                                <div class="col-md mb-3 mb-md-0">
+                                    <div class="o-paragraph--text-media__content pt-3">
+                                        <h2>Projectathon éditeurs #4</h2>
+                                        <h3>21-22 mars 2024</h3>
+                                        <div class="wysiwyg mb-3">
+                                            <p>
+                                                Pour accompagner l'avancement opérationnel du 15-15, un 4ème Projectathon a été organisé !
+                                            </p>
+                                            <p>
+                                                À destination des éditeurs participants, cette réunion de lancement fait
+                                                un point de situation des travaux (techniques, 15-NexSIS et 15-15) et une présentation 
+                                                plus détaillée du DSF 15-15 dont la version 1.1 a été mise en concertation le 18 mars
+                                            </p>
+                                        </div>
+
+                                        <div class="paragraph--lien">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3">
+                                                    <a href="https://youtu.be/0J5sbF9cLNw"
+                                                       class="btn btn--style1 btn--white" target="_blank">Visionner
+                                                    </a>
+                                                </div>
+                                                <div class="col-md mb-3">
+                                                    <a href="/resources/projectathon/24.03.21 - Hub Sante - Projectathon 4.pdf"
+                                                       class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
+                                                        2.6Mo)
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md o-paragraph--text-media__media_column">
+                                    <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                        <div class="o-paragraph--text-media__clip">
+                                            <a href="https://youtu.be/0J5sbF9cLNw" target="_blank">
+                                                <img src="/img/crea/illustrations_webinaires/Projectathon editeurs 1.png"
+                                                     alt="" width="585"
+                                                     height="329" loading="lazy">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
         <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon3">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
