feat/web-landing: replace absolute urls by relative ones

--- a/web/landing/pages/15-15.html
+++ b/web/landing/pages/15-15.html
@@ -277,10 +277,10 @@
                     </div>
                 </div>
                 <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
-                    <a href="https://hub.esante.gouv.fr/specs/" class="btn btn--style1 btn--white mt-1"
+                    <a href="/specs/" class="btn btn--style1 btn--white mt-1"
                         target="_blank">Site de
                         spécifications</a>
-                    <a href="https://hub.esante.gouv.fr/lrm/" class="btn btn--style1 btn--white mt-1" target="_blank">
+                    <a href="/lrm/" class="btn btn--style1 btn--white mt-1" target="_blank">
                         LRM de test </a>
                 </div>
             </div>
