--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -334,6 +334,62 @@
         </div>
 
         <!-- Webinaires en replay -->
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon5">
+            <div class="container">
+                <div class="o-paragraph--text-media__slider">
+                    <div class="o-paragraph--text-media__item">
+                        <div class="o-paragraph--text-media rightVisual">
+                            <div class="row align-items-center">
+                                <div class="col-md mb-3 mb-md-0">
+                                    <div class="o-paragraph--text-media__content pt-3">
+                                        <h2>Projectathon éditeurs #5</h2>
+                                        <h3>27-28 mai 2024</h3>
+                                        <div class="wysiwyg mb-3">
+                                            <p>
+                                                Pour accompagner les travaux 15-15 et 15-NexSIS ainsi que lancer les travaux 15-SMUR/RPIS, un 4ème Projectathon a été
+                                                organisé !
+                                            </p>
+                                            <p>
+                                                À destination des éditeurs de LRM et de tablette SMUR, cette réunion de lancement fait
+                                                un point de situation des travaux (techniques, 15-15, 15-NexSIS et 15-SMUR/RPIS) et une
+                                                présentation plus détaillée des mises à jour du DSF 15-15 v1.2 et du lancement du périmètre 15-SMUR/RPIS.
+                                            </p>
+                                        </div>
+        
+                                        <div class="paragraph--lien">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3">
+                                                    <a href="https://youtu.be/zVBgCOgYkeI" class="btn btn--style1 btn--white"
+                                                        target="_blank">Visionner
+                                                    </a>
+                                                </div>
+                                                <div class="col-md mb-3">
+                                                    <a href="/resources/projectathon/24.05.27 - Hub Sante - Projectathon 5.pdf"
+                                                        class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
+                                                        2.3Mo)
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md o-paragraph--text-media__media_column">
+                                    <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                        <div class="o-paragraph--text-media__clip">
+                                            <a href="https://youtu.be/0J5sbF9cLNw" target="_blank">
+                                                <img src="/img/crea/illustrations_webinaires/Image webinaire 1 finale.png" alt=""
+                                                    width="585" height="329" loading="lazy">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+        
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon4">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
