fix: fixing landing link

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -376,7 +376,7 @@
                                 <div class="col-md o-paragraph--text-media__media_column">
                                     <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                         <div class="o-paragraph--text-media__clip">
-                                            <a href="https://youtu.be/0J5sbF9cLNw" target="_blank">
+                                            <a href="https://youtu.be/zVBgCOgYkeI" target="_blank">
                                                 <img src="/img/crea/illustrations_webinaires/Image webinaire 1 finale.png" alt=""
                                                     width="585" height="329" loading="lazy">
                                             </a>
