--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -407,7 +407,7 @@
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
                                         <h2 style="display: flex; align-items: center;">
-                                            Comité territoire
+                                            Comité territoires
                                             <span class="ml-1 px-1 m-teaser__type rounded-lg text-uppercase bg-brand-2 text-white">
                                                 10'
                                             </span>
