--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -398,7 +398,7 @@
                 </div>
             </div>
         </div>
-                <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon5">
+                <div class="paragraph-space o-paragraph--text-media__wrapper" id="comiteTerritoires">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
