--- a/web/landing/pages/15-15.html
+++ b/web/landing/pages/15-15.html
@@ -339,24 +339,38 @@
     </div>
     <div class="o-paragraph--files row col--eq-height mt-4 ">
         <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-            <a href="/resources/24.03.18_Hub Sante_Dossier des Specifications.pdf?page=89"
+            <a href="/resources/24.05.29_Hub Sante_Dossier des Specifications.pdf"
                class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
                 <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles</p>
                 <p class="m-file__info text-default mb-0"><I>
-                    PDF - Périmètre 15-15 - Version 1.1
-                    <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mis en concertation du 18 mars au 15 avril 2024</p>">
+                    PDF - Périmètre 15-15 - Version 1.2
+                    <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mis en concertation du 29 mai au 18 juin 2024</p>">
                         <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
-                        <span class="sr-only">Mis en concertation du 18 mars au 15 avril 2024</span>
+                        <span class="sr-only">Mis en concertation du 29 mai au 18 juin 2024</span>
                     </button>
-                    - 9 Mo
+                    - 12.9 Mo
                 </I></p>
             </a>
         </div>
         <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-            <a href="/resources/2024-03-18_HubSante_Dossier des specifications.zip"
+            <a href="/resources/24.05.29_Hub Sante_Dossier des Specifications.pdf"
                class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
-                <p class="m-file__title h4 mb-1">Annexes du DSF 15-15</p>
-                <p class="m-file__info text-default mb-0"><I>ZIP - Version 1.1 - 17.8 Mo</I></p>
+                <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles</p>
+                <p class="m-file__info text-default mb-0"><I>
+                    PDF - Périmètre 15-SMUR/RPIS - Version 1.1
+                    <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mis en concertation du 29 mai au 18 juin 2024</p>">
+                        <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
+                        <span class="sr-only">Mis en concertation du 29 mai au 18 juin 2024</span>
+                    </button>
+                    - 12.9 Mo
+                </I></p>
+            </a>
+        </div>
+        <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
+            <a href="/resources/24.05.29_DSF_Hub Sante.zip" class="m-file bg-gray-300 rounded-sm top-left-radius-0 "
+                target="_blank">
+                <p class="m-file__title h4 mb-1">Annexes du DSF</p>
+                <p class="m-file__info text-default mb-0"><I>ZIP - 14.7 Mo</I></p>
             </a>
         </div>
     </div>
