--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -334,6 +334,66 @@
         </div>
 
         <!-- Webinaires en replay -->
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="webinaire2">
+            <div class="container">
+                <div class="o-paragraph--text-media__slider">
+                    <div class="o-paragraph--text-media__item">
+                        <div class="o-paragraph--text-media rightVisual">
+                            <div class="row align-items-center">
+                                <div class="col-md mb-3 mb-md-0">
+                                    <div class="o-paragraph--text-media__content pt-3">
+                                        <h2 style="display: flex; align-items: center;">
+                                            Webinaire Point d'Information #2
+                                            <span class="ml-1 px-1 m-teaser__type rounded-lg text-uppercase bg-brand-2 text-white">
+                                                50'
+                                            </span>
+                                        </h2>
+                                        <h3>3 juin 2024</h3>
+                                        <div class="wysiwyg mb-3">
+                                            <p>
+                                                Ouvert à une audience large, ce 2ème webinaire de Point d'Information sur le Hub Santé représente le contexte et les enjeux
+                                                du projet avant de faire un focus sur les périmètres travaillés sur 2024.
+                                            </p>
+                                            <p>
+                                                Pour les quatre périmètres (technique, 15-15, 15-NexSIS et 15-SMUR/RPIS), une présentation des travaux menés est faite avant de
+                                                présenter les prochains jalons.
+                                            </p>
+                                        </div>
+        
+                                        <div class="paragraph--lien">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3">
+                                                    <a href="https://youtu.be/ndLZQzRFFHg" class="btn btn--style1 btn--white"
+                                                        target="_blank">Visionner
+                                                    </a>
+                                                </div>
+                                                <div class="col-md mb-3">
+                                                    <a href="/resources/24.06.03 - Hub Sante - Webinaire Point d Information 2.pdf"
+                                                        class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
+                                                        2.8Mo)
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md o-paragraph--text-media__media_column">
+                                    <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                        <div class="o-paragraph--text-media__clip">
+                                            <a href="https://youtu.be/ndLZQzRFFHg" target="_blank">
+                                                <img src="/img/crea/illustrations_webinaires/Image webinaire 1 finale.png"
+                                                    alt="" width="585" height="329" loading="lazy">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+        
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon5">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
@@ -385,7 +445,7 @@
                                     <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                         <div class="o-paragraph--text-media__clip">
                                             <a href="https://youtu.be/zVBgCOgYkeI" target="_blank">
-                                                <img src="/img/crea/illustrations_webinaires/Image webinaire 1 finale.png"
+                                                <img src="/img/crea/illustrations_webinaires/Illust. kick off metier des pilotes.png"
                                                     alt="" width="585" height="329" loading="lazy">
                                             </a>
                                         </div>
@@ -398,7 +458,7 @@
                 </div>
             </div>
         </div>
-                <div class="paragraph-space o-paragraph--text-media__wrapper" id="comiteTerritoires">
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="comiteTerritoires">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
@@ -430,7 +490,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="col-md mb-3">
-                                                    <a href="/resources/24.05.23 Comité territoires.pdf"
+                                                    <a href="/resources/24.05.23 Comite territoires.pdf"
                                                         class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
                                                         0.6Mo)
                                                     </a>
