Adding DSF release

--- a/web/landing/pages/15-18.html
+++ b/web/landing/pages/15-18.html
@@ -335,27 +335,27 @@
             </div>
             <div class="o-paragraph--files row col--eq-height mt-4 ">
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                    <a href="/resources/24.05.29_Hub Sante_Dossier des Specifications.pdf"
+                    <a href="/resources/24.06.28_Hub Sante_Dossier des Specifications.pdf"
                         class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
                         <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles</p>
                         <p class="m-file__info text-default mb-0"><I>
                                 PDF - Périmètre 15-NexSIS - Version 1.6
                                 <button type="button" data-toggle="tooltip" data-placement="top" data-html="true"
-                                    title="<p>Mis en concertation du 29 mai au 18 juin 2024</p>">
+                                    title="<p>Mis en concertation du 28 juin au 17 juillet 2024</p>">
                                     <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false">
                                         <use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use>
                                     </svg>
-                                    <span class="sr-only">Mis en concertation du 29 mai au 18 juin 2024</span>
+                                    <span class="sr-only">Mis en concertation du 29 mai au 17 juillet 2024</span>
                                 </button>
                                 - 12.9 Mo
                             </I></p>
                     </a>
                 </div>
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                    <a href="/resources/24.05.29_DSF_Hub Sante.zip" class="m-file bg-gray-300 rounded-sm top-left-radius-0 "
+                    <a href="/resources/24.06.28_DSF_Hub Sante.zip" class="m-file bg-gray-300 rounded-sm top-left-radius-0 "
                         target="_blank">
                         <p class="m-file__title h4 mb-1">Annexes du DSF</p>
-                        <p class="m-file__info text-default mb-0"><I>ZIP - 14.7 Mo</I></p>
+                        <p class="m-file__info text-default mb-0"><I>ZIP - 15.6 Mo</I></p>
                     </a>
                 </div>
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
